# CSA

./: .gitignore  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
PDF/: CSA - Executive report (public).docx
redis_kafka_sync/: README.md  __init__.py  env.conf  pytest.ini  requirements.txt  setup.py
redis_kafka_sync/docker/: Dockerfile  docker-compose.swarm.yml
redis_kafka_sync/scripts/: convert_truststore.py  manage_redis_with_kafka_producer_sync.py
redis_kafka_sync/src/: __init__.py  error_handling.py  kafka_manager.py  key_format.py  producer.py  reactive_producer.py  redis_manager.py  redis_stream_monitor.py
redis_kafka_sync/tests/: __init__.py  conftest.py  test_key_format.py  test_producer.py  test_reactive_processor.py  test_redis_cache.py
redis_mqtt_sync/: .gitignore  README.md  __init__.py  env.conf  mypy.ini  requirements.txt  setup.cfg
redis_mqtt_sync/docker/: Dockerfile  docker-compose.yml
redis_mqtt_sync/scripts/: manage_redis_with_sync_to_mqtt.py
redis_mqtt_sync/src/: __init__.py  main.py  sync_redis_with_mqtt.py
redis_mqtt_sync/src/config/: __init__.py  settings.py
redis_mqtt_sync/src/core/: __init__.py  exceptions.py  orchestrator.py
redis_mqtt_sync/src/services/: __init__.py  interfaces.py  mqtt_service.py  redis_service.py
redis_mqtt_sync/src/utils/: __init__.py  rate_limiter.py
redis_pg_sync/: POSTGRES_PERMISSIONS.md  README.md  __init__.py  env.conf  requirements.txt
redis_to_redis_sync/: README.md  __init__.py  env.conf  requirements.txt
test-results/: pytest-results-3.9.xml
testenv/: pyvenv.cfg
tests/: test_ble_device.py  test_cli.py  test_consumer.py  test_device_factory.py  test_example.py  test_insole_device.py  test_pressure_device.py  test_redis_functions.py
(+80 files in other folders)
