[metadata]
name = bleusb_comm_toolkit
;version = 1.0.0
author = Sarah Gulzar, Susan Peters
author_email = sarah.gulzar@myant.ca
description = Toolkit for USB, BLE, and Data Management functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/myantandco/mbst_bleusb_comm_toolkit.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = ~=3.9
install_requires =
    bleak~=0.18.1
    qasync~=0.23.0
    pyserial==3.5
    pandas==2.2.2
    numpy==1.25.2
    flask~=3.0.3
    requests~=2.32.3
    scipy~=1.11.1
    aiohttp~=3.10.10
    redis~=5.2.0
    python-dotenv~=1.0.1
    pytz~=2023.3
    mypy~=1.15.0
    mbst_core @ git+ssh://git@github.com/myantandco/mbst_core.git
include_package_data = True
use_scm_version = True

[options.extras_require]
dev =
    pytest>=8.3.3
    tox ~= 4.23.2
    flake8
    black
    isort
    setuptools~=68.0.0

[options.packages.find]
where = src

[options.package_data]
mbst.bleusb_comm_toolkit = py.typed

[options.entry_points]
console_scripts =
    mbst-sdk = mbst.bleusb_comm_toolkit.cli:main