[metadata]
name = redis_mqtt_sync
version = 0.1.0
description = Redis to MQTT Synchronization Service
author = MbST
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
install_requires =
    aiomqtt>=1.2.0
    redis>=4.3.0
    python-dotenv>=0.19.0
    colorama>=0.4.4

[options.packages.find]
exclude =
    tests
    tests.* 